--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+        <mat-card-title>Help Desk</mat-card-title>
+        <mat-card-subtitle>System</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="assets/img/side-image.svg" alt="Image Home Help Desk">
+    <mat-card-content>
+        <p>
+            Olá! Seja bem vindo ao sistema Help Desk desenvolvido durante o curso Desenvolvedor Full Stack.<br /> Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular 12 e Spring Boot 2. <br />O sistema
+            está rodando na nuvem sendo o front na Vercel e o back na Heroku.<br /> O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com Tokens JWT e muito mais. O código fonte do projeto pode ser
+            acessado clicando no link Github no menu lateral.
+            <br />
+            <br /> At.te: Sócrates Costa - Sao_C!
+            <br />
+            <a href='https://br.freepik.com/vetores/fundo'>Imagem de 'Fundo vetor criado por rawpixel.com - br.freepik.com'</a>
+        </p>
+    </mat-card-content>
+</mat-card>
