HTML e CSS para HEADER

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,6 +1,6 @@
 .card {
     width: 90%;
-    margin: auto;
+    margin: 1rem auto;
     background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(37, 97, 207, 1) 0%, rgba(0, 212, 255, 1) 100%);
 }
 
