--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card mat-elevation-z8">
     <mat-card-header>
         <mat-card-title>Help Desk</mat-card-title>
         <mat-card-subtitle>System</mat-card-subtitle>
@@ -12,7 +12,7 @@
             <br />
             <br /> At.te: Sócrates Costa - Sao_C!
             <br />
-            <a href='https://br.freepik.com/vetores/fundo'>Imagem de 'Fundo vetor criado por rawpixel.com - br.freepik.com'</a>
         </p>
+        <font size="0.1rem"><a href='https://br.freepik.com/vetores/fundo'>Imagem de 'Fundo vetor criado por rawpixel.com - br.freepik.com'</a></font>
     </mat-card-content>
 </mat-card>
