--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <h1 class="mat-elevation-z8">Help Desk - sao_c</h1>
+    <h1 class="mat-elevation-z8">Help Desk :: sao_c</h1>
 </div>
