--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -14,7 +14,7 @@
             <a mat-list-item routerLink="/">
                 <i class="material-icons">code</i> Github
             </a>
-            <a mat-list-item routerLink="/">
+            <a mat-list-item (click)="logout()">
                 <i class="material-icons">logout</i> Logout
             </a>
         </mat-nav-list>
