HTML e CSS componente TECNICO-CREATE

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,9 +10,9 @@
             está rodando na nuvem sendo o front na Vercel e o back na Heroku.<br /> O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com Tokens JWT e muito mais. O código fonte do projeto pode ser
             acessado clicando no link Github no menu lateral.
             <br />
-            <br /> At.te: Sócrates sao_c!
             <br />
         </p>
+        <h6 align="right">Sócrates :: sao_c!</h6>
         <font size="0.1rem"><a href='https://br.freepik.com/vetores/fundo'>Imagem de 'Fundo vetor criado por rawpixel.com - br.freepik.com'</a></font>
     </mat-card-content>
 </mat-card>
