--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,12 +1,12 @@
 .container {
     height: 100%;
-    background-color: #F0F8FF;
+    background-color: #fefeff;
 }
 
 .sidenav {
     width: 13rem;
-    color: white;
-    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(37, 97, 207, 1) 0%, rgba(0, 212, 255, 1) 100%);
+    color: rgb(253, 253, 253);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(97, 37, 207) 0%, rgba(0, 212, 255, 1) 100%);
 }
 
 img {
@@ -16,7 +16,7 @@ img {
 }
 
 .sidenav a {
-    color: white;
+    color: rgb(253, 253, 253);
 }
 
 .sidenav i {
@@ -25,6 +25,5 @@ img {
 
 .menu {
     margin: 1rem 0 0 1rem;
-    color: white;
-    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(37, 97, 207, 1) 0%, rgba(0, 212, 255, 1) 100%);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgb(97, 37, 207) 0%, rgba(0, 212, 255, 1) 100%);
 }
