--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,8 +1,8 @@
 <div class="container mat-elevation-z8">
     <form class="form">
 
-        <h1 class="fullWidth">Cadastrar Técnico</h1>
-        <img class="fullWidth" src="assets/img/img_tecnico_create.svg" alt="Help Desk">
+        <h1 class="fullWidth">Atualizar Técnico</h1>
+        <img class="fullWidth" src="assets/img/img_tecnico_create.svg" alt="Help Desk - Dicas de um DEV">
 
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin" color="primary">Admin</mat-checkbox>
@@ -13,7 +13,7 @@
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome</mat-label>
             <input [(ngModel)]="tecnico.nome" name="nome" [formControl]="nome" required matInput placeholder="Ex.. fulano de tal" maxlength="50">
-            <mat-icon matSuffix>drive_file_rename_outline</mat-icon>
+            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
@@ -34,9 +34,9 @@
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-        <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+        <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Atualizar</button>
+        <button routerLink="../../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
-    <p class="fullWidth">by :: sao_c</p>
+    <p class="fullWidth">by Valdir Cezar</p>
 </div>
