--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -2,7 +2,7 @@
     <form class="form">
 
         <h1 class="fullWidth">Atualizar Técnico</h1>
-        <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Help Desk - Dicas de um DEV">
+        <img class="fullWidth" src="assets/img/img_tecnico_create.svg" alt="Help Desk - Dicas de um DEV">
 
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin" color="primary">Admin</mat-checkbox>
@@ -38,5 +38,5 @@
         <button routerLink="../../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
-    <p class="fullWidth">by Valdir Cezar</p>
+    <p class="fullWidth">by :: sao_c</p>
 </div>
