CRUD para CLIENTE

--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -2,7 +2,7 @@
     <form class="form">
 
         <h1 class="fullWidth">Cadastrar Técnico</h1>
-        <img class="fullWidth" src="assets/img/img_tecnico_create.svg" alt="Help Desk">
+        <img class="fullWidth" src="assets/img/img_create.svg" alt="Help Desk">
 
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin" color="primary">Admin</mat-checkbox>
