--- a/src/app/components/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/components/cliente/cliente-delete/cliente-delete.component.html
@@ -1,40 +1,40 @@
 <div class="container mat-elevation-z8">
     <form class="form">
 
-        <h1 class="fullWidth">Atualizar Técnico</h1>
+        <h1 class="fullWidth">Deletar Cliente</h1>
         <img class="fullWidth" src="assets/img/img_create.svg" alt="Help Desk">
 
         <section class="section">
-            <mat-checkbox (click)="addPerfil(0)" class="margin" color="primary">Admin</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)" [checked]="true" class="margin" color="primary">Cliente</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)" class="margin" color="primary">Tecnico</mat-checkbox>
+            <mat-checkbox [disabled]="true" class="margin" color="primary">Admin</mat-checkbox>
+            <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>
+            <mat-checkbox [disabled]="true" class="margin" color="primary">Cliente</mat-checkbox>
         </section>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Nome</mat-label>
-            <input [(ngModel)]="tecnico.nome" name="nome" [formControl]="nome" required matInput placeholder="Ex.. fulano de tal" maxlength="50">
+            <input [(ngModel)]="cliente.nome" name="nome" [disabled]="true" matInput>
             <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>CPF</mat-label>
-            <input [(ngModel)]="tecnico.cpf" name="cpf" [formControl]="cpf" required matInput placeholder="Ex..000.000.000-00" mask="000.000.000-00">
+            <input [(ngModel)]="cliente.cpf" name="cpf" [disabled]="true" matInput>
             <mat-icon matSuffix>pin </mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>E-mail</mat-label>
-            <input [(ngModel)]="tecnico.email" name="email" [formControl]="email" required matInput placeholder="Ex.. fulano@mail.com">
+            <input [(ngModel)]="cliente.email" name="email" [disabled]="true" matInput>
             <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
         <mat-form-field class="fullWidth" appearance="legacy">
             <mat-label>Senha</mat-label>
-            <input [(ngModel)]="tecnico.senha" name="senha" [formControl]="senha" required type="password" matInput placeholder="Ex.. 1234">
+            <input [(ngModel)]="cliente.senha" name="senha" [disabled]="true" matInput type="password">
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
-        <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Atualizar</button>
+        <button (click)="delete()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Deletar</button>
         <button routerLink="../../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
     </form>
 
