--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -8,21 +8,21 @@
             <a mat-list-item routerLink="tecnicos">
                 <i class="material-icons">account_circle</i> Técnicos
             </a>
-            <a mat-list-item routerLink="/">
-                <i class="material-icons">person</i> Clientes
+            <a mat-list-item routerLink="clientes">
+                <i class=" material-icons ">person</i> Clientes
             </a>
-            <a mat-list-item routerLink="/">
-                <i class="material-icons">code</i> Github
+            <a mat-list-item routerLink="/ ">
+                <i class="material-icons ">code</i> Github
             </a>
-            <a mat-list-item (click)="logout()">
-                <i class="material-icons">logout</i> Logout
+            <a mat-list-item (click)="logout() ">
+                <i class="material-icons ">logout</i> Logout
             </a>
         </mat-nav-list>
     </mat-drawer>
 
-    <div class="sidenav-content">
+    <div class="sidenav-content ">
         <app-header></app-header>
-        <button class="menu mat-elevation-z8" (click)="drawer.toggle()" mat-icon-button>
+        <button class="menu mat-elevation-z8 " (click)="drawer.toggle() " mat-icon-button>
           <mat-icon>menu</mat-icon>
        </button>
         <router-outlet></router-outlet>
