--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -5,22 +5,23 @@
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Título do chamado</mat-label>
-            <input [formControl]="titulo" required matInput placeholder="Ex. Trocar bateria de notebook">
+            <input [(ngModel)]="chamado.titulo" name="titulo" [formControl]="titulo" required matInput placeholder="Ex. Trocar bateria de notebook">
         </mat-form-field>
     </form>
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
             <mat-label>Selecione um status</mat-label>
-            <mat-select [formControl]="status" required>
+            <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
                 <mat-option value="2">ENCERRADO</mat-option>
             </mat-select>
         </mat-form-field>
+
         <mat-form-field appearance="outline">
             <mat-label>Selecione uma prioridade</mat-label>
-            <mat-select [formControl]="prioridade" required>
+            <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
                 <mat-option value="2">ALTA</mat-option>
@@ -31,8 +32,8 @@
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
-            <mat-select [formControl]="tecnico" required>
-                <mat-option value="0">Valdir</mat-option>
+            <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
+                <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -40,20 +41,20 @@
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
-            <mat-select [formControl]="cliente" required>
-                <mat-option value="0">Albert Einstein</mat-option>
+            <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
+                <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Deixe uma descrição</mat-label>
-            <textarea [formControl]="descricao" required class="descricao" matInput placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
+            <mat-label>Deixe uma observação</mat-label>
+            <textarea [(ngModel)]="chamado.observacoes" name="observacoes" [formControl]="observacoes" requiredclass="observacoes" matInput placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
         </mat-form-field>
     </form>
 
-    <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+    <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
     <button class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="fullWidth">by :: sao_c</p>
