--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z8">
     <h1 class="full-width">Atualizando chamado</h1>
-    <img class="full-width" src="assets/img/chamado-create.svg" alt="Chamado image">
+    <img class="full-width" src="assets/img/img_create.svg" alt="Chamado image">
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
