--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -11,7 +11,7 @@
 
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaStatus(chamado.status) }}</mat-label>
+            <mat-label>STATUS ({{ retornaStatus(chamado.status) }})</mat-label>
             <mat-select [(ngModel)]="chamado.status" name="status" [formControl]="status" required>
                 <mat-option value="0">ABERTO</mat-option>
                 <mat-option value="1">EM ANDAMENTO</mat-option>
@@ -20,7 +20,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-            <mat-label>{{ retornaPrioridade(chamado.prioridade) }}</mat-label>
+            <mat-label>PRIORIDADE ({{ retornaPrioridade(chamado.prioridade) }})</mat-label>
             <mat-select [(ngModel)]="chamado.prioridade" name="prioridade" [formControl]="prioridade" required>
                 <mat-option value="0">BAIXA</mat-option>
                 <mat-option value="1">MÉDIA</mat-option>
@@ -31,7 +31,7 @@
 
     <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeTecnico }}</mat-label>
+            <mat-label>TÉCNICO ({{ chamado.nomeTecnico }})</mat-label>
             <mat-select [(ngModel)]="chamado.tecnico" name="tecnico" [formControl]="tecnico" required>
                 <mat-option *ngFor="let tec of tecnicos" value="{{ tec.id }}">{{ tec.nome }}</mat-option>
             </mat-select>
@@ -40,7 +40,7 @@
 
     <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>{{ chamado.nomeCliente }}</mat-label>
+            <mat-label>CLIENTE ({{ chamado.nomeCliente }})</mat-label>
             <mat-select [(ngModel)]="chamado.cliente" name="cliente" [formControl]="cliente" required>
                 <mat-option *ngFor="let cli of clientes" value="{{ cli.id }}">{{ cli.nome }}</mat-option>
             </mat-select>
@@ -55,7 +55,7 @@
     </form>
 
     <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
-    <button routerLink="../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+    <button routerLink="../../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
     <p class="fullWidth">by :: sao_c</p>
 </div>
