--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,14 +5,16 @@
 
         <img src="assets/img/img_signIn.svg" alt="Help Desk">
 
-        <mat-form-field class="full-width" appearance="fill">
+        <mat-form-field class="full-width" appearance="outline">
             <mat-label>E-mail</mat-label>
             <input [formControl]="email" required [(ngModel)]="creds.email" name="email" matInput placeholder="Ex. fulano@mail.com">
+            <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
 
-        <mat-form-field class="full-width" appearance="fill">
+        <mat-form-field class="full-width" appearance="outline">
             <mat-label>Senha</mat-label>
             <input [formControl]="senha" required [(ngModel)]="creds.senha" name="senha" type="password" matInput placeholder="Ex. 123">
+            <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
 
         <button (click)="logar()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Login</button>
