--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -14,7 +14,7 @@
             <a mat-list-item routerLink="chamados">
                 <i class=" material-icons">support</i> Chamados
             </a>
-            <a mat-list-item routerLink="/ ">
+            <a mat-list-item href="https://github.com/socratescosta09/helpdesk-front" target="_blank">
                 <i class="material-icons ">code</i> Github
             </a>
             <a mat-list-item (click)="logout() ">
